--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,11 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.sun.jersey</groupId>
+            <artifactId>jersey-core</artifactId>
+            <version>1.15</version>
+        </dependency>
     </dependencies>
 
     <build>
