finish implementing both registering and logging in

--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,13 @@
             <version>2.11</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-text</artifactId>
+            <version>1.9</version>
+            <scope>compile</scope>
+        </dependency>
+
 
         <dependency>
             <groupId>javax.servlet</groupId>
