do not drop tables on liquibase update

--- a/src/main/resources/liquibase.properties
+++ b/src/main/resources/liquibase.properties
@@ -5,4 +5,4 @@ url: ${dataSource.project.jdbcURL}
 username: ${dataSource.project.database.username}
 password: ${dataSource.project.database.password}
 verbose: true
-dropFirst: true
+dropFirst: false
